[project]
name = "bolt-python-custom-step-template"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "slack-bolt==1.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.2",
    "ruff==0.14.14",
]

[tool.ruff]
line-length = 125

[tool.ruff.lint]
ignore = []
select = [
	# pycodestyle error
	"E",
	# pycodestyle warning
	"W",
	# Pyflakes
	"F",
	# isort
	"I",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
log_file = "logs/pytest.log"
log_file_level = "DEBUG"
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
